fixed overflowing content

--- a/brainwave.css
+++ b/brainwave.css
@@ -9,6 +9,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
